*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -12,7 +12,7 @@
 </h1>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
   <tr> 
-    <td width="30%" valign="top" align="right">
+    <td width="30%" valign="top" align="right"> 
       <div align="right"> <b>Stop in Main</b> </div>
     </td>
     <td width="70%" valign="top" align="left"> 
@@ -45,6 +45,17 @@
     </td>
   </tr>
   <tr> 
+    <td width="30%" valign="top" align="right"><b>Changing variable values</b></td>
+    <td width="70%" valign="top" align="left">
+      <p>When a thread is suspended in the debugger, you can change the values 
+        of Java primitives and Strings in the <b>Variables</b> view. From the 
+        variable's context menu, choose <b>Change Variable Value</b>. </p>
+      <p><img src="images/change-variable-value.gif" width="483" height="275"> 
+      </p>
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Variable values in hover help</b></td>
     <td width="70%" valign="top" align="left">When a thread is suspended and the 
       cursor is placed over a variable in the Java editor, the value of that variable 
@@ -63,7 +74,7 @@
     </td>
   </tr>
   <tr> 
-    <td width="30%" valign="top" align="right">
+    <td width="30%" valign="top" align="right"> 
       <div aligh="right"> <b>Creating watch items</b> </div>
     </td>
     <td width="70%" valign="top" align="left">The Java debugger can create watch 
@@ -95,7 +106,7 @@
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Detail formatters</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>In the <b>Variables</b> &amp; <b>Expressions</b> views, the detail pane 
         shows an expanded representation of the currently selected variable. By 
         default, this expanded representation is the result of calling <b>toString()</b> 
