*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -46,7 +46,7 @@
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Changing variable values</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>When a thread is suspended in the debugger, you can change the values 
         of Java primitives and Strings in the <b>Variables</b> view. From the 
         variable's context menu, choose <b>Change Variable Value</b>. </p>
@@ -82,6 +82,17 @@
       action (available in the context menu, and in the <b>Run</b> menu). As well, 
       a watch item can be created by selecting a variable and using the <b>Watch</b> 
       action.</td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Threads &amp; Monitors view</b></div>
+    </td>
+    <td width="70%" valign="top" align="left"> 
+      <p>The debugger's<b>Threads and Monitors</b> view shows which threads are 
+        holding locks and which are waiting to acquire locks. </p>
+      <p><img src="../whatsNew/images/threads-monitors.gif" width="373" height="260"></p>
+      <p>&nbsp;</p>
+    </td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Step filters</b></td>
