--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -56,8 +56,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <div align="right"> <b>Threads &amp; Monitors view</b></div>
     </td>
     <td width="70%" valign="top" align="left"> 
-      <p>The debugger's new Threads &amp; Monitors view shows which threads are 
-        holding locks and which are waiting to acquire locks. </p>
+      <p>The debugger's new <b>Threads and Monitors</b> view shows which threads 
+        are holding locks and which are waiting to acquire locks. </p>
       <p><img src="images/threads-monitors.gif" width="373" height="260"> </p>
       <p>&nbsp;</p>
     </td>
