*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -140,13 +140,22 @@
     </td>
   </tr>
   <tr> 
+    <td width="30%" valign="top" align="right"><b>Command line details</b></td>
+    <td width="70%" valign="top" align="left">You can always see the exact command 
+      line used to launch a program in run or debug mode by selecting <b>Properties</b> 
+      from the context menu of a process or debug target, even if the launch has 
+      terminated. 
+      <p><img src="images/process-info.gif" width="496" height="254"></p>
+    </td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
     <td width="70%" valign="top" align="left"> 
-      <p>Java stack traces in the console now appear with hyperlinks. When you 
-        place the mouse over a line in a stack trace, the pointer changes to the 
-        hand and the stack trace is underlined. Pressing the mouse button opens 
-        the associated Java source file and positions the cursor at the corresponding 
+      <p>Java stack traces in the console appear with hyperlinks. When you place 
+        the mouse over a line in a stack trace, the pointer changes to the hand 
+        and the stack trace is underlined. Pressing the mouse button opens the 
+        associated Java source file and positions the cursor at the corresponding 
         line.</p>
       <p><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133"></p>
     </td>
