*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -64,6 +64,14 @@
     </td>
   </tr>
   <tr> 
+    <td width="30%" valign="top" align="right"><b>Hot code replace</b></td>
+    <td width="70%" valign="top" align="left">The debugger supports Hot Code Replace 
+      when debugging with a 1.4 or higher VM, or the J9 VM. This lets you make 
+      changes to code you are currently debugging. Note that some changes such 
+      as new or deleted methods, class variables or inner classes cannot be hot 
+      loaded.</td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Controlling<br>
       your console</b></td>
     <td width="70%" valign="top" align="left">Output displayed in the console 
