--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -304,6 +304,7 @@ to Use the Eclipse API</a></i> for information about how to write compliant
 plug-ins.</p>
 <h3>2.1 Incompatibilities between release 2.1 and 2.0</h3>
 <p>Eclipse 2.1 breaks compatibility with Eclipse 2.0 in the following areas.</p>
+<p>Note: Bug numbers refer to the Eclipse project bug database at <a href="http://dev.eclipse.org/bugs/">http://dev.eclipse.org/bugs/</a></p>
 <h3>Platform - Core</h3>
 <h4>Linked resources</h4>
 <p>Eclipse 2.1 allows a project in the workspace to bring together contents from
@@ -406,18 +407,19 @@ existing clients that explicitly check for the <code>SWT.CONTROL</code>
 modifier. In most cases, they should instead check for <code>SWT.MOD1</code> so
 that they work appropriately on both Macs and non-Macs. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=24393">24393</a>)</p>
 <h4>OLE variant type exceptions</h4>
-<p>An <code>SWTError</code>  exception is now thrown when a Java type is requested
-from an empty variant type (<code>VT_EMPTY</code>). Since existing clients
-should already be handling <code>SWTError</code> exceptions as per the spec for <code>Variant.getInt()</code>,
-etc., this change should not affect existing clients. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=24402">24402</a>)</p>
+<p>An <code>SWTError</code> exception is now thrown when a Java type is
+requested from an empty variant type (<code>VT_EMPTY</code>). Since existing
+clients should already be handling <code>SWTError</code> exceptions as per the
+spec for <code>Variant.getInt()</code>, etc., this change should not affect
+existing clients. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=24402">24402</a>)</p>
 <h4>Multiple drag and drop adapters</h4>
-<p>An <code>SWTError</code>  exception is now thrown if you create a second <code>DragSource</code>
+<p>An <code>SWTError</code> exception is now thrown if you create a second <code>DragSource</code>
 (or <code>DropTarget</code>) for a widget. Across various window systems, the
 results of creating multiple drag source or drop target objects were at best
-indeterminate. The exception makes it clear that this is not supported. Since existing clients
-should already be handling <code>SWTError</code> exceptions as per the spec for
-the <code>DragSource</code> and <code>DropTarget</code> constructors, this change should not
-impact existing clients. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35214">35214</a>)</p>
+indeterminate. The exception makes it clear that this is not supported. Since
+existing clients should already be handling <code>SWTError</code> exceptions as
+per the spec for the <code>DragSource</code> and <code>DropTarget</code>
+constructors, this change should not impact existing clients. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35214">35214</a>)</p>
 <h3>Platform - Install/Update</h3>
 <p>None.</p>
 <h3>Platform - Ant</h3>
@@ -430,8 +432,8 @@ impact existing clients. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi
 should report inexact matches. The user can set this via the <b>Workbench &gt;
 Search </b>preference page. The new API method <code>SearchUI.arePotentialMatchesIgnored</code>
 should be used to query the preference setting. Existing clients that contribute
-a particular search engine (or search page) should consider whether the notion of
-an inexact match is meaningful in their particular context, and honor this
+a particular search engine (or search page) should consider whether the notion
+of an inexact match is meaningful in their particular context, and honor this
 preference if it is. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20663">20663</a>)</p>
 <h3>Platform - Text</h3>
 <p>[TBD]</p>
@@ -594,7 +596,7 @@ change.</p>
 <p>Eclipse 2.0 Install/Update has discontinued the use of components in favor of
 features. Consequently, PDE 2.0 supports feature-related development while
 component support has been removed. Features are described in the Eclipse
-Platform Plug-in Developer Guide.</p>
+Platform Plug-in Developer Guide. </p>
 <h2>3. <a name="Known Issues"></a> Known Issues</h2>
 <blockquote>
   <p><a href="#I-Platform">3.1 Platform</a><br>
@@ -602,10 +604,13 @@ Platform Plug-in Developer Guide.</p>
   &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Ant">3.1.2 Ant</a><br>
   &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Help">3.1.3 Help</a><br>
   &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - UI">3.1.4 UI</a><br>
-  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - SWT">3.1.5 SWT</a><br>
-  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Team - CVS">3.1.6 Team</a><br>
-  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Install/Update">3.1.7
-  Install/Update</a><a href="#I-Java Development Tools (JDT)"><br>
+  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Text">3.1.5 Text</a><br>
+  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - SWT">3.1.6 SWT</a><br>
+  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Compare">3.1.7 Team</a><br>
+  &nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Install/Update">3.1.8
+  Install/Update<br>
+  </a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Debug">3.1.9 Debug<br>
+  </a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#I-Platform - Compare">3.1.10 Compare<br>
   3.2 Java Development Tools (JDT)</a><a href="#I-Plug-in Development Environment (PDE)"><br>
   3.3 Plug-in Development Environment (PDE)</a><br>
   <a href="#I-Other - FTP and WebDAV support">3.4 Other<br>
@@ -613,9 +618,8 @@ Platform Plug-in Developer Guide.</p>
   FTP and WebDAV support</a></p>
 </blockquote>
 <p>Note: Bug numbers refer to the Eclipse project bug database at <a href="http://dev.eclipse.org/bugs/">http://dev.eclipse.org/bugs/</a></p>
-<p>As a reminder of past problems, items carried over from the most recent
-release notes (2.0.1) are shown in <font color="#00FF00">green</font>. Many of
-these can be expected to go away, although some will remain.</p>
+<p>[Items carried over from the most recent release notes (2.0.2) are shown in <font color="#00FF00">green</font>.
+Many of these can be expected to go away, although some will remain.]</p>
 <h3>3.1 <a name="I-Platform">Platform</a></h3>
 <h4>Eclipse process does not exit (HP-UX only)</h4>
 <p>On HP-UX, the HP JVM process that runs the Eclipse Workbench does not
@@ -829,7 +833,9 @@ toolbar:</font></p>
 </blockquote>
 <p><font color="#00FF00">(<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=20988">bug
 20988</a>)</font></p>
-<h3>3.1.5 <a name="I-Platform - SWT">Platform - SWT</a></h3>
+<h3>3.1.5 <a name="I-Platform - Text">Platform - Text</a></h3>
+<p><i>[TBD]</i></p>
+<h3>3.1.6 <a name="I-Platform - SWT">Platform - SWT</a></h3>
 <h4>Printing and drag and drop not available on Mac (Mac OS X Carbon only)</h4>
 <p>The Mac OS X Carbon implementation of SWT does not yet support printing or
 drag and drop. (bugs <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33637">33637</a>,
@@ -955,7 +961,7 @@ is such that the time to do so becomes increasingly longer each time it occurs,
 to the point that, in Eclipse's case, it can take more than a minute to switch
 between editors and views! Because of this, accelerators and mnemonics are
 explicitly ignored on Solaris.</font></p>
-<h3>3.1.6 <a name="I-Platform - Team - CVS">Platform - Team - CVS</a></h3>
+<h3>3.1.7 <a name="I-Platform - Team - CVS">Platform - Team - CVS</a></h3>
 <p>Note: Additional information on how to use CVS from Eclipse can be found in
 the <a href="http://dev.eclipse.org/viewcvs/index.cgi/~checkout~/platform-vcm-home/docs/online/cvs_features2.0/cvs-faq.html">Eclipse
 CVS FAQ</a>.</p>
@@ -1103,7 +1109,7 @@ additions using the Synchronize view. (<a href="http://bugs.eclipse.org/bugs/sho
 with an earlier version of Eclipse will be unusable, and the user will need to
 reauthenticate. (<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=32899">bug
 32899</a>)</p>
-<h3>3.1.7 <a name="I-Platform - Install/Update">Platform - Install/Update</a></h3>
+<h3>3.1.8 <a name="I-Platform - Install/Update">Platform - Install/Update</a></h3>
 <p><b><font color="#00FF00">Migrating 2.0 pre-release workspaces</font></b>
 <p><font color="#00FF00">When migrating an existing workspace that was used with
 a 2.0 pre-release version of Eclipse (e.g., created with development drops
@@ -1175,6 +1181,24 @@ the application will start with the set of features and plug-ins that were
 processed and configured on the previous start. If prior configuration cannot be
 found, the application will start with the full set of plug-ins found in the
 installation location.</font>
+<p><b><font color="#00FF00">Link file entry with trailing blank is invalid</font></b>
+<p><font color="#00FF00">If a link file used to connect product extensions with
+products contains an entry with a trailing blank characters, it will be
+considered invalid. The workaround is to ensure that the entry ends with an
+end-of-line character (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=22993">bug
+22993</a>).</font>
+<p><b><font color="#00FF00">Enabling two versions of the same feature</font></b>
+<p><font color="#00FF00">Care should be taken when enabling and disabling
+multiple versions of the same feature. If they include other features and the
+inclusion is set with a match attribute that is not &quot;perfect&quot;,
+disabling old feature version may have a consequence of disabling new children.
+To avoid this situation, disable the new version first, then enable the old one
+i.e. never have two versions of the same feature simultaneously enabled (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=25236">bug
+25236</a>).</font></p>
+<h3>3.1.9 <a name="I-Platform - Debug">Platform - Debug</a></h3>
+<p>[TBD]</p>
+<h3>3.1.10 <a name="I-Platform - Compare">Platform - Compare</a></h3>
+<p>[TBD]</p>
 <h3>3.2 <a name="I-Java Development Tools (JDT)">Java Development Tools (JDT)</a></h3>
 <h4><font color="#00FF00">Running Java programs with non-Latin-1 characters in
 package or class names</font></h4>
@@ -1439,33 +1463,39 @@ problem can be worked around as follows::</font></p>
 20119</a>)</font></p>
 <h3>3.4 <a name="I-Other - FTP and WebDAV support">Other</a></h3>
 <h3>3.4.1 F<a name="I-Other - FTP and WebDAV support">TP and WebDAV support</a></h3>
-<h4>When mapped to a target, the project folder is ignored</h4>
-<p>Ignoring the project folder is by design. Normally with target management you
-put/get the contents of the project, not the actual project. The place you pick
-in the site explorer is where the project contents will go. This allows your
-local project to have a different name than the container in the WebDAV/FTP
-server. If you want to map several projects to the same site location, you
-create a new folder for each one. This is why &quot;New Folder&quot; is in the
-mapping page. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=17657">bug
-17657</a>)</p>
-<h4>FTP messages cause an exception</h4>
-<p>With some servers, the FTP client may receive messages that it did not
-anticipate. These will cause an exception. Trying the operation again usually
-works. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=18108">bug 18108</a>)</p>
-<h4>FTP problems with spaces in resource names</h4>
-<p>FTP does not work properly when file or folder name contains spaces. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20220">bug
-20220</a>)</p>
-<h4>FTP problems retrieving remote timestamps with NT server</h4>
-<p>Problems have occurred with some servers (NT server Serv-U FTP-Server v2.5k )
-when trying to obtain the timestamp of a newly uploaded file. This causes a
-&quot;file does not exist&quot; error. The workaround is to <b>Synchronize</b>
-again and continue. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=19715">bug
-19715</a>)</p>
+<h4><font color="#00FF00">When mapped to a target, the project folder is ignored</font></h4>
+<p><font color="#00FF00">Ignoring the project folder is by design. Normally with
+target management you put/get the contents of the project, not the actual
+project. The place you pick in the site explorer is where the project contents
+will go. This allows your local project to have a different name than the
+container in the WebDAV/FTP server. If you want to map several projects to the
+same site location, you create a new folder for each one. This is why &quot;New
+Folder&quot; is in the mapping page. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=17657">bug
+17657</a>)</font></p>
+<h4><font color="#00FF00">FTP messages cause an exception</font></h4>
+<p><font color="#00FF00">With some servers, the FTP client may receive messages
+that it did not anticipate. These will cause an exception. Trying the operation
+again usually works. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=18108">bug
+18108</a>)</font></p>
+<h4><font color="#00FF00">FTP problems with spaces in resource names</font></h4>
+<p><font color="#00FF00">FTP does not work properly when file or folder name
+contains spaces. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=20220">bug
+20220</a>)</font></p>
+<h4><font color="#00FF00">FTP problems retrieving remote timestamps with NT
+server</font></h4>
+<p><font color="#00FF00">Problems have occurred with some servers (NT server
+Serv-U FTP-Server v2.5k ) when trying to obtain the timestamp of a newly
+uploaded file. This causes a &quot;file does not exist&quot; error. The
+workaround is to <b>Synchronize</b> again and continue. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=19715">bug
+19715</a>)</font></p>
 <h2>4. <a name="Defects fixed"></a>Defects fixed</h2>
 <h3>4.1 Release 2.1 over 2.0</h3>
 <p>Release 2.1 improves on release 2.0. The various features and plug-in in this
-release have version id &quot;2.1.0&quot; (the exceptions are the <code>org.apache.*</code>,
-<code>org.junit</code>, and <code>org.eclipse.tomcat</code> plug-ins).</p>
+release have version id &quot;2.1.0&quot;. The only exceptions are the following
+plug-ins: <code>org.apache.ant</code> (version id &quot;1.5.2&quot;), <code>org.apache.lucene</code>
+(&quot;1.2.1&quot;), <code>org.apache.xerces</code> (version &quot;4.0.7&quot;),
+<code>org.eclipse.tomcat</code> (version &quot;4.0.7&quot;), and <code>org.junit</code>
+(version &quot;3.8.1&quot;).</p>
 <p>Release 2.1 fixes the following defects present in release 2.0. (Note that
 this list includes defects fixed in the 2.0.* service releases up to and
 including 2.0.3.)</p>
