--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_actions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_actions.htm
@@ -12,7 +12,9 @@ Registering editor actions
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>Registering editor actions</H2>
-<p>we have seen the extensions used to register editor actions...blah blah....&lt;in progress&gt;</p>
+<p>&lt;IN PROGRESS&gt;</p>
+
+<p>we have seen the extensions used to register editor actions...blah blah...</p>
 
 <h3>Context menu</h3>
 
