--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_utilities.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_utilities.htm
@@ -12,7 +12,8 @@ Text editor utilities
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>Text editor utilities</H2>
-<p>&lt;in progress &gt;</p>
+<p>&lt;IN PROGRESS&gt;</p>
+<p>The Java example editor inherits a lot of useful default behavior from <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a></p>
 <p>By subclassing TextEditor, your editor can inherit some useful utility
 methods.</p>
 <h3>Preference handling</h3>
